--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "package",
   "version": "1.0.0",
   "description": "Repo created for testing some ES6 features",
-  "main": "index.js",
+  "main": "index.html",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
